--- a/第3回課題.ipynb
+++ b/第3回課題.ipynb
@@ -268,7 +268,7 @@
       },
       "outputs": [],
       "source": [
-        "with open(\"/content/lecture-ai-engineering/day3/data/about_switch2.txt\", \"r\") as f:\n",
+        "with open(\"/about_switch2.txt\", \"r\") as f:\n",
         "  raw_writedown = f.read()"
       ]
     },
@@ -295,7 +295,6 @@
       "outputs": [],
       "source": [
         "# Retrievalの実行\n",
-        "question = \"LLMにおけるInference Time Scalingとは？\"\n",
         "questions = [\n",
         "    \"Nintendo Switch2の国内専用本体価格はいくらですか\",\n",
         "    \"Nintendo Switchの本体価格はいくらですか\",\n",
